# SmartStream

./: CMakeLists.txt  LICENSE  README.md
Algorithm/: Algorithm.sln  CMakeLists.txt  说明.txt  说明.txt.bak
Algorithm/3rdpart/Linux/cmake/: FindFFMPEG.cmake  FindPOCO.cmake
Algorithm/3rdpart/windows/cmake/: FindFFMPEG.cmake  FindPOCO.cmake  FindZLMEDIAKIT.cmake
Algorithm/AlgorithmManager/: AlgorithmManager.sln  AlgorithmManager.vcxproj  AlgorithmManager.vcxproj.bak  CMakeLists.txt  CMakeLists.txt.bak  ReadMe.txt  plugins.ini
Algorithm/AlgorithmManager/src/: AlgorithmLogger.cpp  AlgorithmLogger.h  AlgorithmManager.cpp
Algorithm/AlgorithmManager/test/: CMakeLists.txt  SDKTest.cpp  SDKTest.h  UnitTest.vcxproj
Algorithm/AlgorithmPlugin/: CMakeLists.txt  plugins.ini
Algorithm/AlgorithmPlugin/LeaveDetection/: CMakeLists.txt
Algorithm/AlgorithmPlugin/LeaveDetection/config/: config.ini
Algorithm/AlgorithmPlugin/LeaveDetection/src/: AlgorithmPlugin.cpp  GlobalParm.h  ImageRetrieval.cpp  Utils.h  VideoAnalysis.cpp  VideoAnalysis.h
Algorithm/AlgorithmPlugin/MotorVehicleStatistics/yolov5/: BaseModel.cpp  BaseModel.h  Imode.h  Logger.cpp  Logger.h  ModelInference.cpp  ModelInference.h  OpenCVConfig.cmake  TinyTimer.h  Yolov5.cpp  Yolov5.h  config.cfg  cudefine.h  define.h  utils.cpp  utils.h  yololayer.h  yolov5_old.cpp
Algorithm/AlgorithmPlugin/PluginDemo/: CMakeLists.txt
Algorithm/AlgorithmPlugin/PluginDemo/config/: config.ini
Algorithm/AlgorithmPlugin/PluginDemo/src/: AlgorithmPlugin.cpp  AlgorithmPlugin.h  GlobalParm.cpp  GlobalParm.h  ImageRetrieval.cpp  ImageRetrieval.h  VideoAnalysis.cpp  VideoAnalysis.h
Algorithm/AlgorithmPlugin/TrafficCount/: CMakeLists.txt
Algorithm/AlgorithmPlugin/TrafficCount/config/: config.ini
Algorithm/AlgorithmPlugin/TrafficCount/src/: AlgorithmPlugin.cpp  AlgorithmPlugin.h  GlobalParm.cpp  GlobalParm.h  ImageBuf.cpp  ImageRetrieval.h  VideoAnalysis.cpp  VideoAnalysis.h
Algorithm/AlgorithmTest/: AlgorithmTest.cpp  AlgorithmTest.h  AlgorithmUnitTest.cpp  AlgorithmUnitTest.h  CMakeLists.txt  SDKTest.cpp  SDKTest.h  SDKUnitTest.cpp  SDKUnitTest.h  UnitTest.cpp
Algorithm/include/: Algorithm.h  AlgorithmLog.h  AlgorithmManager.h  TypeDefAlgorithmError.h  common.h
Cmake/: FindFFMPEG.cmake  FindPOCO.cmake
Src/FFmpegUtil/: FFMpegDecoder.h  FFMpegEncoder.h  FFMpegImageLoader.h  FFMpegImageSaver.h
Test/: CMakeLists.txt  FFMpegTest.cpp  FFMpegTest.h  UnitTest.cpp  UnitTest.h
